--- a/app/src/main/res/layout/activity_sign_up_set_car_info_transporter.xml
+++ b/app/src/main/res/layout/activity_sign_up_set_car_info_transporter.xml
@@ -51,12 +51,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="96dp"
         android:ems="10"
-        android:hint="Vehicle Model"
         android:inputType="textPersonName"
+        android:hint="Vehicle Model"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -66,14 +65,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="232dp"
         android:ems="10"
         android:hint="License Plate Number"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/capacity" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/capacity"
@@ -81,14 +80,14 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="164dp"
         android:ems="10"
         android:hint="Vehicle Capacity"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/carmake" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <Button
