--- a/app/src/main/res/layout/activity_sign_up_farmer_add_photos.xml
+++ b/app/src/main/res/layout/activity_sign_up_farmer_add_photos.xml
@@ -7,18 +7,6 @@
     tools:context="com.example.wagner.avocado.SignUpFarmerAddPhotos">
 
     <Button
-        android:id="@+id/signUpSetLocationSkipButton"
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="62dp"
-        android:layout_height="39dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Skip"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
         android:id="@+id/signUpFarmerAddPhotosBackButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
@@ -30,13 +18,13 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/signUpFarmerAddPhotosNextButton"
+        android:id="@+id/signUpFarmerAddPhotosFinishButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:text="Next"
+        android:text="Finish"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
