--- a/app/src/main/res/layout/activity_farmer_begin_request_pickup.xml
+++ b/app/src/main/res/layout/activity_farmer_begin_request_pickup.xml
@@ -33,12 +33,13 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="23dp"
+        android:layout_width="341dp"
+        android:layout_height="78dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="What produce would you like to be transported?"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:breakStrategy="simple"
+        android:text="What kind of produce do you need transported?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -49,7 +50,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
         android:text="How much? "
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/produceSpinner" />
 
