--- a/app/src/main/res/layout/activity_farmer_messages.xml
+++ b/app/src/main/res/layout/activity_farmer_messages.xml
@@ -14,7 +14,7 @@
             android:id="@+id/messages"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#eb66d760"
+            android:background="#558B2F"
             android:elevation="4dp"
             android:paddingBottom="24dp">
 
@@ -26,9 +26,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="11dp"
                 android:text="Messages"
-                android:textColor="#fff"
-                android:textSize="24sp"
-                android:textStyle="bold" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@color/common_google_signin_btn_text_dark_default" />
 
             <TextView
                 android:id="@+id/instructions_text"
@@ -40,6 +39,7 @@
                 android:text="Tap on a name to send an SMS"
                 android:textColor="#fff"
                 android:textSize="14sp" />
+
         </RelativeLayout>
 
 
@@ -58,7 +58,8 @@
                 android:clickable="true"
                 android:elevation="4dp"
                 android:padding="20dp"
-                android:text="+Add a new contact" />
+                android:text="+Add a new contact"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -70,7 +71,8 @@
                 android:clickable="true"
                 android:elevation="4dp"
                 android:padding="20dp"
-                android:text="Santiago" />
+                android:text="Santiago"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -80,7 +82,8 @@
                 android:clickable="true"
                 android:elevation="4dp"
                 android:padding="20dp"
-                android:text="Felipe" />
+                android:text="Felipe"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <TextView
                 android:layout_width="fill_parent"
@@ -90,7 +93,8 @@
                 android:clickable="true"
                 android:elevation="4dp"
                 android:padding="20dp"
-                android:text="Alejandro" />
+                android:text="Alejandro"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         </LinearLayout>
     </RelativeLayout>
