--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
@@ -6,29 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.wagner.avocado.FarmerRequestPickupSetPickupLocation">
 
-    <TextView
-        android:id="@+id/textView22"
-        android:layout_width="304dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
-        android:text="Set your pickup location."
-        android:textAlignment="center"
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <fragment
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="352dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="8dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.368"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
@@ -57,22 +44,22 @@
         android:id="@+id/farmerRequestPickupSetPickupLocationEnterAddress"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:layout_marginStart="96dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Enter Your Address Here"
         android:inputType="textPostalAddress"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
     <TextView
         android:id="@+id/textView21"
         android:layout_width="304dp"
-        android:layout_height="46dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
-        android:text="Set your pickup location."
-        android:textAlignment="center"
-        android:textSize="24sp"
+        android:layout_height="65dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:text="Where should your transporter go for pickup?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,9 +67,10 @@
         android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toStartOf="@+id/farmerRequestPickupSetPickupLocationEnterAddress"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView21"
         app:srcCompat="@mipmap/house" />
 
 </android.support.constraint.ConstraintLayout>
