--- a/app/src/main/res/layout/activity_sign_up_later.xml
+++ b/app/src/main/res/layout/activity_sign_up_later.xml
@@ -20,14 +20,14 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="299dp"
-        android:layout_height="30dp"
+        android:layout_width="311dp"
+        android:layout_height="39dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Don't want to fill in this info now?"
-        android:textSize="20sp"
+        android:text="Don't want to fill this in now?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,7 +55,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUpLaterTomorrow" />
 
     <ToggleButton
         android:id="@+id/signUpLaterToday"
