--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
@@ -10,12 +10,13 @@
         android:id="@+id/map"
         class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="352dp"
+        android:layout_height="311dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
