--- a/app/src/main/res/layout/activity_farmer_request_pickup_choose_transporter.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_choose_transporter.xml
@@ -88,7 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView20" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/agromovil"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
