--- a/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView23" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/facebookButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
